main: changes for deployment